--- a/style.css
+++ b/style.css
@@ -9,9 +9,20 @@ html, body {
 .sidebar {
   background-color: var(--main-color);
   color: aliceblue;
+  padding: 20px;
 }
 
 .sidebar ul {
   list-style-type: none;
   padding: 0;
+}
+
+.logo {
+  font-size: 24px;
+}
+
+.logo img {
+  max-height: 40px;
+  margin-right: 10px;
+  filter: invert(1);
 }
