--- a/style.css
+++ b/style.css
@@ -8,26 +8,56 @@ html, body {
 
 .sidebar {
   background-color: var(--main-color);
-  color: aliceblue;
+  color: white;
   padding: 20px;
+  display: grid;
+  grid-template-columns: 50px 200px;
+  align-items: center;
 }
 
 .sidebar ul {
   list-style-type: none;
   padding: 0;
+  display: grid;
+  grid-template-columns: 40px 200px;
+  gap: 12px;
 }
 
-.logo {
+.logo-text {
   font-size: 24px;
+  grid-column: 2 / 3;
 }
 
-.logo img {
-  max-height: 40px;
-  margin-right: 10px;
+.large-icon {
+  height: 40px;
+  filter: invert(1);
+}
+
+.sb-element {
+  grid-column: 2 / 3;
+}
+
+img.icon {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .icon {
-  margin-right: 30px;
   filter: invert(1);
   max-height: 20px;
+  grid-column: 1 / 2;
+}
+
+.main-links {
+  margin-top: 20px;
+}
+
+.main-links, .extra-links {
+  grid-column: 1 / 3;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
