--- a/style.css
+++ b/style.css
@@ -15,13 +15,22 @@ html, body {
   filter: invert(80%) sepia(17%) saturate(1071%) hue-rotate(125deg) brightness(92%) contrast(83%);
 }
 
+.wrapper {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 6fr;
+}
+
 .sidebar {
   background-color: var(--main-color);
   color: var(--base-color);
   padding: 20px;
   display: grid;
   grid-template-columns: 50px 150px;
+  grid-template-rows: 1fr 6fr 8fr;
   align-items: center;
+  grid-row: 1 / 3;
+  height: 100vh;
 }
 
 .sidebar ul {
@@ -62,10 +71,12 @@ img.icon {
 
 .main-links {
   margin-top: 20px;
+  grid-column: 1 / 3;
 }
 
-.main-links, .extra-links {
+.extra-links {
   grid-column: 1 / 3;
+  align-self: self-start;
 }
 
 a {
@@ -74,6 +85,7 @@ a {
 }
 
 .header {
+  background-color: var(--base-color);
   display: grid;
   grid-template-columns: 2fr 1fr;
 }
