--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 5fr;
+  grid-template-rows: 3fr 10fr;
 }
 
 .sidebar {
@@ -27,7 +27,7 @@ html, body {
   padding: 20px;
   display: grid;
   grid-template-columns: 50px 150px;
-  grid-template-rows: 1fr 6fr 10fr;
+  grid-template-rows: 1fr 7fr 10fr;
   align-items: center;
   grid-row: 1 / 3;
   height: 100vh;
@@ -90,10 +90,12 @@ a {
   background-color: var(--base-color);
   display: grid;
   grid-template-columns: 2fr 1fr;
+  min-height: 120px;
 }
 
 .search-bar {
   background-color: lightgray;
+  align-self: center;
 }
 
 .buttons {
