--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ html, body {
 * {
   --main-color: #176B87;
   --selected-color: #64CCC5;
-  --base-color: #DAFFFB;
+  --base-color: #D9D9D9;
+  --darker-base: #5D5D5D;
+  --light-color: #DAFFFB;
   --dark-color: #001C30;
   font-family: 'Ubuntu', sans-serif;
 }
@@ -23,7 +25,7 @@ html, body {
 
 .sidebar {
   background-color: var(--main-color);
-  color: var(--base-color);
+  color: var(--light-color);
   padding: 20px;
   display: grid;
   grid-template-columns: 50px 150px;
@@ -83,21 +85,33 @@ img.icon {
 
 a {
   text-decoration: none;
-  color: var(--base-color);
+  color: var(--light-color);
 }
 
 .header {
-  background-color: var(--base-color);
   display: grid;
   grid-template-columns: 2fr 1fr;
   min-height: 120px;
 }
 
 .search-bar {
-  background-color: lightgray;
   align-self: center;
+  margin-left: 30px;
+  display: flex;
+  align-items: center;
 }
 
-.buttons {
-  background-color: lightgray;
+.icon.search {
+  margin: 0;
+  filter: invert(30%) sepia(0%) saturate(1961%) hue-rotate(139deg) brightness(110%) contrast(81%);
+}
+
+textarea {
+  flex: auto;
+  margin-left: 20px;
+  margin-right: 90px;
+  border-color: transparent;
+  border-radius: 30px;
+  resize: none;
+  background: var(--base-color);
 }
