--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ a {
   filter: invert(30%) sepia(0%) saturate(1961%) hue-rotate(139deg) brightness(110%) contrast(81%);
 }
 
-textarea {
+input {
   flex: auto;
   margin-left: 20px;
   margin-right: 90px;
@@ -114,4 +114,28 @@ textarea {
   border-radius: 30px;
   resize: none;
   background: var(--base-color);
+}
+
+.profile-menu {
+  align-self: center;
+  align-items: center;
+  display: flex;
+  margin-left: 60px;
+}
+
+.notification {
+  height: 20px;
+  margin: 0;
+  filter: invert(30%) sepia(0%) saturate(1961%) hue-rotate(139deg) brightness(110%) contrast(81%);
+}
+
+.profile-picture {
+  height: 50px;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.user-name {
+  font-weight: 900;
+  color: var(--dark-color);
 }
