--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@ html, body {
   margin: 0;
 }
 
+h3 {
+  font-size: 16px;
+  margin: 0;
+}
+
+h1 {
+  font-size: 24px;
+  margin: 0;
+}
+
 * {
   --main-color: #176B87;
   --selected-color: #64CCC5;
@@ -92,11 +102,11 @@ a {
   display: grid;
   grid-template-columns: 2fr 1fr;
   min-height: 120px;
+  margin-left: 30px;
 }
 
 .search-bar {
   align-self: center;
-  margin-left: 30px;
   display: flex;
   align-items: center;
 }
@@ -114,6 +124,7 @@ input {
   border-radius: 30px;
   resize: none;
   background: var(--base-color);
+  height: 30px;
 }
 
 .profile-menu {
@@ -130,7 +141,7 @@ input {
 }
 
 .profile-picture {
-  height: 50px;
+  height: 40px;
   margin-right: 30px;
   margin-left: 30px;
 }
@@ -138,6 +149,22 @@ input {
 .user-name {
   font-weight: 900;
   color: var(--dark-color);
+}
+
+.welcome .profile-picture {
+  height: 60px;
+  width: 60px;
+  margin: 0;
+}
+
+.welcome {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.welcome-text {
+  margin-left: 30px;
 }
 
 .main-section {
