--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ html, body {
   margin: 0;
 }
 
+button:hover {
+  background-color: var(--selected-color);
+  color: var(--main-color);
+}
+
 h3 {
   font-size: 16px;
   margin: 0;
@@ -165,6 +170,24 @@ input {
 
 .welcome-text {
   margin-left: 30px;
+  color: var(--dark-color);
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  padding: 10px;
+  width: 100px;
+  margin: 20px;
+  border-radius: 30px;
+  border: none;
+  background-color: var(--main-color);
+  color: var(--light-color);
+  font-weight: 500;
 }
 
 .main-section {
