--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ a {
   display: grid;
   grid-template-columns: 2fr 1fr;
   min-height: 120px;
-  margin-left: 30px;
+  padding-left: 30px;
 }
 
 .search-bar {
