--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ h3 {
   margin: 0;
 }
 
+h2 {
+  font-size: 20px;
+  margin: 0;
+}
+
 h1 {
   font-size: 24px;
   margin: 0;
@@ -196,4 +201,23 @@ button {
 
 .main-section {
   background-color: var(--base-color);
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  padding: 30px;
+}
+
+.projects-section {
+  display: grid;
+  grid-template-columns: 1fr repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-rows: 10px;
+  padding-right: 30px;
+  gap: 30px;
+}
+
+.projects-section h2 {
+  grid-column: 1 / 3;
+}
+
+.project {
+  background-color: white;
 }
