--- a/style.css
+++ b/style.css
@@ -230,3 +230,15 @@ button {
   padding: 20px;
   border-left: 4px solid var(--main-color);
 }
+
+.project-actions {
+  width: 30%;
+  margin-right: 0;
+  margin-left: auto;
+}
+
+.action-icons {
+  height: 20px;
+  margin: 5px;
+  filter: invert(13%) sepia(2%) saturate(0%) hue-rotate(14deg) brightness(99%) contrast(93%);
+}
