--- a/style.css
+++ b/style.css
@@ -229,10 +229,13 @@ button {
   grid-column: 1 / 3;
 }
 
-.project {
+.card {
   background-color: white;
   border-radius: 10px;
   padding: 20px;
+}
+
+.project {
   border-left: 4px solid var(--main-color);
 }
 
@@ -246,4 +249,16 @@ button {
   height: 20px;
   margin: 5px;
   filter: invert(13%) sepia(2%) saturate(0%) hue-rotate(14deg) brightness(99%) contrast(93%);
+}
+
+.announcements div {
+  margin-top: 20px;
+}
+
+.announcements .card p {
+  font-size: 14px;
+}
+
+hr {
+  border-top: 4px var(--darker-base);
 }
